Bug 36848 - Named range can not be selected with Name Box
Summary: Named range can not be selected with Name Box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-05-04 10:12 UTC by GerardF
Modified: 2012-11-22 08:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GerardF 2011-05-04 10:12:44 UTC
LibreOffice 3.4.0 
DEV300m103 (Build:3)
Under Windows Vista.

Cannot use Name Box for selecting Range names with Insert > Name > Define.
Both with New file or existing file created with another version.

Clic on a named range or named cell, cursor goes to cell A1.
Expected : Named range selected.

Works with 3.3.2
Comment 1 vitriol 2011-05-04 11:03:59 UTC
Keywords regression. Nominating as stopper
Comment 2 Kohei Yoshida 2011-05-04 13:38:41 UTC
Sorry. I don't understand the description.

Please provide a test document and/or step-by-step instructions of exactly what to do to reproduce this problem.
Comment 3 vitriol 2011-05-04 14:01:29 UTC
Steps to reproduce:

1) Select a range of cells (e.g. B2:D4)
2) Click Insert > Names > Define...
3) Write a name for the range (e.g. RangeTest) and press OK
4) Click on another cell of the sheet to remove the selection (e.g. E1). The ComboBox in format toolbar that shows cells now shows E1
5) Open the ComboBox and select RangeTest

Expected result:

RangeTest (B2:D4) is selected/highlighted

Actual result:

RangeTest is not selected and focus jumps to A1
Comment 4 Kohei Yoshida 2011-05-04 14:07:11 UTC
Thanks.  This is exactly what I needed.
Comment 5 Kohei Yoshida 2011-05-04 16:40:57 UTC
Just fixed this.

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-4&id=e43736eda4df49bd1c592ba1c7a7c26bcc6a2083

It was caused by my earlier fix for something else.  Glad to have caught this in time for 3.4.
Comment 6 Stephan Zietsman 2011-10-03 07:29:16 UTC
> It was caused by my earlier fix for something else.  Glad to have caught this
> in time for 3.4.

This bug is still present in 3.4.3.  Does anyone know for which build the fix will be implemented?

--
LibreOfficePortable 3.4.3 (as downloaded from portableapps.com)
Running on Windows 7 x64 Professional
About:
LibreOffice 3.4.3 
OOO340m1 (Build:302)
Comment 7 Stephan Zietsman 2011-11-14 02:46:25 UTC
(In reply to comment #6)
> This bug is still present in 3.4.3.  Does anyone know for which build the fix
> will be implemented?

Sorry, scratch that.  It is working (I must have been thinking of something else).