fdo#36848: Typing a named range in the position window should jump.